Further work on fuzzing